--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     
   </section>
   <footer>
-    Copyright &copy; myntra.com | All rights reserved
+    Copyright &copy; GowthamMyntra.com | All rights reserved
   </footer>
   <script src="script.js"></script>
 </body>
